# it_tests_1sem

./: .gitignore  CMakeLists.txt  README.md  arrays.c  arrays.h  inputs.c  inputs.h  it_tests_1sem.c  it_tests_1sem.sln  it_tests_1sem.vcxproj  it_tests_1sem.vcxproj.filters  lectureTask.c  math_utils.c  math_utils.h  memory.c  memory.h  menu.c  menu.h  task_structures.h  test1_task1.c  test1_task2.c  test1_task3.c  test2_task1.c  test2_task2.c  test2_task3.c  test3_task1.c  test3_task2.c  test3_task3.c
